Bug 53655 - : Install 3.6.1 RC 1 on 3.6.0 RC4, causes crash on startup
Summary: : Install 3.6.1 RC 1 on 3.6.0 RC4, causes crash on startup
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
3.6.1.1 rc
Hardware: Other Windows (All)
: high critical
Assignee: Stephan Bergmann
URL:
Whiteboard: BSA target:3.7.0 target:3.6.1
Keywords:
: 53849 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-17 19:59 UTC by Greg Smith
Modified: 2012-08-24 17:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot: 'error_firststart_3.6.1.1_over_3.5.6.2.png' (23.46 KB, image/png)
2012-08-17 22:09 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Greg Smith 2012-08-17 19:59:44 UTC
Problem description: 

Steps to reproduce:
1. Install 3.6.1 RC 1 (over 3.6.0 RC 4)
2. Start LibreOffice
3. Crashes attempting to remove directory:
c:\Documents and Settings\My user name\Application Data\LibreOffice\3\user\extensions\...

I regret that I didn't write down the folders... I have shared, tmp and bundled left. I "fixed" this by manually deleting the folders until the startup crash stopped happening. The first folder that caused a problem was nested two folders down from the one listed above and held sun.org components. I had to delete 4 or five folders manually to get the startup to work without a fatal error about "unable to delete folder".

Windows XP SP3 up to date patches.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.1 (KHTML, like Gecko) Chrome/21.0.1180.79 Safari/537.1
Comment 1 manj_k 2012-08-17 22:07:27 UTC
Confirmed, on WinXP 32b.

- Installed LibO 3.6.1.1 rc (Build ID: 4db6344) over 
LibO 3.5.6.2 (Build ID: e0fbe70-5879838-a0745b0-0cd1158-638b327)

- Started via soffice.exe

- Fatal Error
cannot remove directory
file:///C:/Dokumente%20und%20Einstellungen/mjk1/Anwendungsdaten/LibreOffice/3/user/extensions/bundled/registry/com.sun.star.comp.deployment.bundle.PackageRegistryBackend

- OK

- Microsoft Visual C++ Runtime Library
Runtime Error!
Program: C:\Programme\LibreOffice 3.6\program\soffice.bin
abnormal program termination

Renaming the directory 'extensions' or 'bundled' [%appdata%/LibreOffice/3/user/extensions/bundled/...] solved the problem.

See also: attached screenshot 'error_firststart_3.6.1.1_over_3.5.6.2.png'
See also: https://bugs.freedesktop.org/show_bug.cgi?id=53006
Comment 2 manj_k 2012-08-17 22:09:40 UTC
Created attachment 65716 [details]
Screenshot: 'error_firststart_3.6.1.1_over_3.5.6.2.png'
Comment 3 Kim Bastin 2012-08-18 04:14:33 UTC
Confirmed on WinXP SP3 after installing 3.6.1 rc1 over 3.6.0 final (= 3.6.0.4). Launching LibreOffice either from the desktop icon or by clicking on an associated file resulted in the sequence of error messages described above.

Deleting the directory manually helped very little, as the next launch failed in exactly the same way on failing to delete another directory, then another — all subdirectories of c:\Documents and Settings\[me]\LibreOffice\3\user\extensions\bundled\registry\

Inspection revealed hundreds more files in subdirectories.

Renaming the \registry\ element of the path did not help: its subdirectories were still found and failed to delete.

Renaming the \bundled\ element of the path fixed the problem.
Comment 4 manj_k 2012-08-19 13:40:57 UTC
The same error messages (on WinXP 32b) with server image of

LibO-Dev_3.7.0.0.alpha0+
W2008R2@20-With-Symbol-Bytemark-Hosting MASTER
pull time 2012-08-18 00:16:52
core:03d64b736ac612f7ce2e7c40a0be04a6e23ae489

LibO-Dev_3.7.0.0.alpha0+
Win-x86@6 MASTER
pull time 2012-08-13 10:23:24
core:c8218367a0f52206591a5048848fa5292405b6c3

LibO-Dev_3.7.0.0.alpha0+
Win-x86@6 MASTER
pull time 2012-08-10 21:00:41
core:9b85b65fb5367b4a5d1c2bd1eed14e3bafe45405

(bootstrap.ini for all Master builds: 
UserInstallation=$SYSUSERCONFIG/LibO-dev/3)

Workaround: renaming the dir 'bundled'.
Comment 5 manj_k 2012-08-20 19:00:52 UTC
*** Bug 53849 has been marked as a duplicate of this bug. ***
Comment 6 manj_k 2012-08-21 14:11:27 UTC
The same error messages (on WinXP 32b) with server image of
LibO-Dev_3.6.2.0+
Win-x86_9-Voreppe libreoffice-3-6
pull time 2012-08-20 21:57:19
core:9b1f4aac63e0f1e5453485f8b4c36c9020bbea03

(Workaround: renaming the dir 'bundled' [%appdata%]).


Works fine (no error messages) with
LibO-Dev_3.6.1.0+
Win-x86_9-Voreppe libreoffice-3-6
pull time 2012-08-12 21:30:17
core:cd656ac11743a6472f5a5fafe9b97d3fe5d11e0e.


CC: Stephan Bergmann
Comment 7 Stephan Bergmann 2012-08-21 14:51:49 UTC
(In reply to comment #1)
> Renaming the directory 'extensions' or 'bundled'
> [%appdata%/LibreOffice/3/user/extensions/bundled/...] solved the problem.

Do you still have a 'bundled' folder around that caused the problem and can you make it available as a zip?  I wonder what could prevent soffice.bin from deleting it.
Comment 8 Stephan Bergmann 2012-08-21 15:21:22 UTC
ah, can reproduce here myself (only on XP, appears to not happen with Windows 7)
Comment 9 manj_k 2012-08-21 15:26:34 UTC
(In reply to comment #8)
> ah, can reproduce here myself (only on XP, appears to not happen with Windows
> 7)

So you don't need a sample anymore?
Comment 10 Stephan Bergmann 2012-08-21 16:09:50 UTC
(In reply to comment #9)
> So you don't need a sample anymore?

no, found the problem; thanks
Comment 11 Not Assigned 2012-08-21 16:10:53 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8cdce148c76c93c5d41820610d6e6ac175e03a7

fdo#53655: Ignore failure to remove directories (as happens on Windows XP)
Comment 12 Not Assigned 2012-08-21 16:22:36 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=471b121a585dfdf6c6040084ec108100ef89de77&g=libreoffice-3-6

fdo#53655: Ignore failure to remove directories (as happens on Windows XP)


It will be available in LibreOffice 3.6.2.
Comment 13 Not Assigned 2012-08-21 16:50:31 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8beb667105e30b37b322fc62c8ebf923101b679f&g=libreoffice-3-6-1

fdo#53655: Ignore failure to remove directories (as happens on Windows XP)


It will be available already in LibreOffice 3.6.1.
Comment 14 manj_k 2012-08-22 09:17:21 UTC
Verified with
LibO-Dev_3.6.2.0+ 
Win-x86_9-Voreppe libreoffice-3-6
pull time 2012-08-21 23:44:01
core:1e49061273f1f64fe02e4ec916dc7b4b45207d21.

That works well (no error message), tested with several LibreOffice user profiles.
Comment 15 manj_k 2012-08-24 17:57:32 UTC
Verified with
Libo 3.6.1.2 rc (Build ID: e29a214);
installed on
LibO 3.6.1.1 rc (Build ID: 4db6344).

Works fine.