fdo#53655: Ignore failure to remove directories (as happens on Windows XP)

...plus, add error codes to other failure's exception strings, just in case...

Change-Id: Ic21c52e0ab52ed1752745e86bde214aee7c3c208